Command cleanup - Fishing. Added 2 new fishing permissions nodes.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -109,6 +109,7 @@ Fishing.Effect.2=Magic Hunter
 Fishing.Effect.3=Find Enchanted Items
 Fishing.Effect.4=Shake (vs. Entities)
 Fishing.Effect.5=Shake items off of mobs w/ fishing pole
+Fishing.Enchant.Chance=[[RED]]Magic Hunter Chance: [[YELLOW]]{0}
 Fishing.ItemFound=[[GRAY]]Treasure found!
 Fishing.Listener=Fishing: 
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
@@ -485,7 +486,7 @@ Guides.Unarmed=Guide coming soon...
 Guides.Woodcutting=Guide coming soon...
 
 #INSPECT
-Inspect.Offline= [[RED]]That player is offline, inspecting offline players is limited to Ops!
+Inspect.Offline= [[RED]]You do not have permission to inspect offline players!
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
