Mining now completely ignore Silk Touch enchanted picks

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,8 @@ Version 1.3.07
  + Added permission nodes for Treasure & Magic Hunter for Fishing
  = Fixed bug where the permission node for Impact didn't work
  = Fixed some bypass nodes defaulting true for Ops
+ ! Changed Mining to ignore blocks when the pick is enchanted with Silk Touch
+ ! Changed Super Breaker to be non-functional when used with a Silk Touch enchanted pick
  ! Changed MySQL to save player information 50ms apart from each other to reduce the load on the MySQL server
  - Removed some unused permission nodes
 
