--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,7 @@ Version 1.3.07
  + Added a permission node for Greater Impact ability
  + Added permission nodes for Treasure & Magic Hunter for Fishing
  + Added config options for enabling/disabling specific double drops
+ + Added automatic zip backup of flatfile database
  = Fixed bug where the permission node for Impact didn't work
  = Fixed some bypass nodes defaulting true for Ops
  ! Changed Mining to ignore blocks when the pick is enchanted with Silk Touch
