--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Aterrizaje Agraciado**
 Acrobatics.Combat.Proc=[[GREEN]]**Esquivado**
-Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
+Acrobatics.DodgeChance=[[RED]]Probabilidad de Esquivar: [[YELLOW]]{0}%
 Acrobatics.Effect.0=Rodada
 Acrobatics.Effect.1=Reduce o Elimina el da\u00f1o de caida
 Acrobatics.Effect.2=Rodada Majestuosa
@@ -8,27 +8,27 @@ Acrobatics.Effect.3=El doble de efectivo que una rodada normal
 Acrobatics.Effect.4=Esquivar
 Acrobatics.Effect.5=Reduce el da\u00f1o de ataque a la mitad
 Acrobatics.Listener=Acrobacias:
-Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
-Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
+Acrobatics.Roll.Chance=[[RED]]Probabilidad de Rodar: [[YELLOW]]{0}%
+Acrobatics.Roll.GraceChance=[[RED]]Probabilidad de Rodada Majestuosa: [[YELLOW]]{0}%
 Acrobatics.Roll.Text=**Rodado**
 Acrobatics.SkillName=ACROBACIAS
 Acrobatics.Skillup=[[YELLOW]]Habilidad de Acrobacias incrementada en {0}. Total ({1})
-Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
-Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
-Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
+Archery.Combat.DazeChance=[[RED]]Probabilidad de Aturdimiento: [[YELLOW]]{0}%
+Archery.Combat.RetrieveChance=[[RED]]Probabilidad de Recuperar Flechas: [[YELLOW]]{0}
+Archery.Combat.SkillshotBonus=[[RED]]Da\u00f1o bonus por Habilidad de Tiro: [[YELLOW]]{0}
 Archery.Effect.0=Habilidad de Tiro
 Archery.Effect.1=Incrementar da\u00f1o hecho con arcos
 Archery.Effect.2=Aturdir (Jugadores)
 Archery.Effect.3=Desorienta a los enemigos y saca 4 corazones de da\u00f1o
-Archery.Effect.4=Arrow Retrieval
-Archery.Effect.5=Chance to retrieve arrows from corpses
+Archery.Effect.4=Recuperaci\u00f3n de Flecha
+Archery.Effect.5=Probabilidad de recuperar flechas de los cadaveres
 Archery.Listener=Arquer\u00eda:
 Archery.SkillName=ARQUER\u00cdA
 Archery.Skillup=[[YELLOW]]Habilidad de Arquer\u00eda incrementada en {0}. Total ({1})
 Axes.Ability.Bonus.0=Dominio del Hacha
 Axes.Ability.Bonus.1={0} de Da\u00f1o Bonus
 Axes.Ability.Bonus.2=Impacto
-Axes.Ability.Bonus.3=Deal {0} Bonus DMG to armor
+Axes.Ability.Bonus.3=Aplicar un bonus de {0} de da\u00f1o a la armadura
 Axes.Ability.Bonus.4=Gran Impacto
 Axes.Ability.Bonus.5=Hacer {0} de da\u00f1o bonus a los enemigos sin armadura
 Axes.Ability.Lower=[[GRAY]]**BAJAS TU HACHA**
@@ -90,7 +90,7 @@ Fishing.SkillName=PESCADOR
 Fishing.Skillup=[[YELLOW]]Habilidad de Pescador incrementada en {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}%
 Herbalism.Ability.FD=[[RED]]Dieta del Granjero: [[YELLOW]]Rango {0}
-Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
+Herbalism.Ability.GTe.Length=[[RED]]Duraci\u00f3n de Tierra Verde: [[YELLOW]]{0}seg
 Herbalism.Ability.GTh.Chance=[[RED]]Probabilidad de Pulgar Verde: [[YELLOW]]{0}%
 Herbalism.Ability.GTh.Fail=[[RED]]**PULGAR VERDE FALL\u00d3**
 Herbalism.Ability.GTh.Stage=[[RED]]Etapa de Pulgar Verde: [[YELLOW]]El trigo crece en etapa {0}
@@ -151,7 +151,7 @@ Mining.Blast.Effect.5=+60% de producci\u00f3n minera, sin residuos, doble drops
 Mining.Blast.Effect.6=+65% de producci\u00f3n minera, sin residuos y triple drops
 Mining.Blast.Effect.7=+70% de producci\u00f3n minera, sin residuos, triple drops
 Mining.Blast.Radius.Increase=[[RED]]Incrementado Radio de Explosi\u00f3n: [[YELLOW]]+{0}
-Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
+Mining.Blast.Rank=[[RED]]Miner\u00eda Explosiva: [[YELLOW]] Rango {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Miner\u00eda Explosiva!
 Mining.Blast.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Miner\u00eda Explosiva [[GREEN]]est\u00e1 refrescada!
 Repair.Effect.0=Reparaci\u00f3n
@@ -188,7 +188,7 @@ Swords.Ability.Lower=[[GRAY]]**BAJAS TU ESPADA**
 Swords.Ability.Ready=[[GREEN]]**PREPARASTE TU ESPADA**
 Swords.Combat.Bleed.Chance=[[RED]]Probabilidad de Sangrado: [[YELLOW]]{0}%
 Swords.Combat.Bleed.Length=[[RED]]Duraci\u00f3n del Sangrado: [[YELLOW]]{0} ticks
-Swords.Combat.Bleed.Note=[[GRAY]]NOTE: [[YELLOW]]1 Tick happens every 2 seconds
+Swords.Combat.Bleed.Note=[[GRAY]]NOTA: [[YELLOW]]1 Tick sucede cada 2 segundos
 Swords.Combat.Bleeding.Stopped=[[GRAY]]\u00a1El sangrado ha [[GREEN]]parado[[GRAY]]!
 Swords.Combat.Bleeding=[[GREEN]]**ENEMIGO SANGRANDO**
 Swords.Combat.Counter.Chance=[[RED]]Probabilidad de Contra Ataque: [[YELLOW]]{0}%
@@ -202,8 +202,8 @@ Swords.Effect.2=Ataque Dentado (HABILIDAD)
 Swords.Effect.3=25% de da\u00f1o y Sangrado+ en el \u00e1rea de cobertura
 Swords.Effect.4=Ataque Dentado Sangriento+
 Swords.Effect.5=Sangrado de 5 Ticks
-Swords.Effect.6=Bleed
-Swords.Effect.7=Apply a bleed DoT
+Swords.Effect.6=Sangrado
+Swords.Effect.7=Aplicar sangrado que da\u00f1a con el tiempo
 Swords.Listener=Espadas:
 Swords.SkillName=ESPADAS
 Swords.Skills.SS.Off=[[RED]]**Ataque Dentado ha expirado**
@@ -215,7 +215,7 @@ Swords.SS.Length=[[RED]]Duraci\u00f3n del Ataque Dentado: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Consciente del Entorno
 Taming.Ability.Bonus.1=Lobos evitan peligros
 Taming.Ability.Bonus.2=Piel Gruesa
-Taming.Ability.Bonus.3=1/2 Damage, Fire Resistance
+Taming.Ability.Bonus.3=1/2 Da\u00f1o, Resistencia al Fuego
 Taming.Ability.Bonus.4=A Prueba de Golpes
 Taming.Ability.Bonus.5=Explosivos hacen 1/6 del da\u00f1o normal
 Taming.Ability.Bonus.6=Garras Afiladas
@@ -234,10 +234,10 @@ Taming.Effect.10=A Prueba de Golpes
 Taming.Effect.11=Reducci\u00f3n de Da\u00f1o por Explosiones
 Taming.Effect.12=Llamado a la Naturaleza
 Taming.Effect.13=Convocar a un animal a tu lado
-Taming.Effect.14=[[GRAY]]COTW (Ocelot): Crouch and left-click with {0} Fish in hand
-Taming.Effect.15=[[GRAY]]COTW (Wolf): Crouch and left-click with {0} Bones in hand
+Taming.Effect.14=[[GRAY]]TIP (Ocelote): Agacharse y hacer click izquierdo con {0} pescados en la mano
+Taming.Effect.15=[[GRAY]]TIP (Lobo): Agacharse y hacer click izquierdo con {0} huesos en la mano
 Taming.Effect.16=Servicio de Comida R\u00e1pida
-Taming.Effect.17=Chance for wolves to heal on attack
+Taming.Effect.17=Probabilidad de que los lobos se curen en ataque
 Taming.Effect.2=Mordisco
 Taming.Effect.3=Golpe Cr\u00edtico que aplica Sangrado
 Taming.Effect.4=Garras Afiladas
@@ -253,7 +253,7 @@ Taming.Skillup=[[YELLOW]]Habilidad de Domador incrementada en {0}. Total ({1})
 Taming.Summon.Complete=[[GREEN]]Invocaci\u00f3n completada
 Taming.Summon.Fail.Ocelot=[[RED]]Tienes demasiados ocelotes cerca como para convocar m\u00e1s.
 Taming.Summon.Fail.Wolf=[[RED]]Tienes demasiados lobos cerca como para convocar m\u00e1s.
-Unarmed.Ability.Berserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
+Unarmed.Ability.Berserk.Length=[[RED]]Duraci\u00f3n de Enloquecido: [[YELLOW]]{0}seg
 Unarmed.Ability.Bonus.0=Estilo del Pu\u00f1o de Hierro
 Unarmed.Ability.Bonus.1=+{0} Mejora de DA\u00d1O
 Unarmed.Ability.Chance.ArrowDeflect=[[RED]]Probabilidad de Desv\u00edo de Flechas: [[YELLOW]]{0}%
@@ -310,7 +310,7 @@ Combat.Ignition=[[RED]]**IGNICION**
 Combat.StruckByGore=[[RED]]**FUISTE MORDISQUEADO**
 Combat.TargetDazed=El objetivo fue [[DARK_RED]]aturdido
 Combat.TouchedFuzzy=[[DARK_RED]]Est\u00e1s confuso. Te sientes mareado.
-mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
+mcMMO.Description=[[DARK_AQUA]]Acerca del Proyecto [[YELLOW]]mcMMO[[DARK_AQUA]]:,[[GOLD]]mcMMO es un mod RPG de [[RED]]c\u00f3digo abierto[[GOLD]] creado en febrero de 2011,[[GOLD]]por [[BLUE]]nossr50[[GOLD]]. El objetivo es de proporcionar una experiencia RPG de calidad.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] para ver los comandos,[[GOLD]] - [[GREEN]]Escriba [[RED]]/HABILIDAD[[GREEN]] para ver info detallada de la habilidad,[[DARK_AQUA]]Desarrolladores:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Lider del Proyecto),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Desarrolladores Senior),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Desarrollador),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Desarrollador),[[GOLD]] - [[GREEN]]Sharkiller [[BLUE]](Traductor),[[GOLD]] - [[GREEN]]barreytor [[BLUE]](Traductor),[[DARK_AQUA]]Links \u00fatiles:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Reportar bugs,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] Chat IRC,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Tema en el foro de Bukkit
 Commands.Ability.Off=Habilidades [[RED]]desactivadas
 Commands.Ability.On=Habilidades [[GREEN]]activadas
 Commands.AdminChat.Off=Chat s\u00f3lo para Admins [[RED]]desactivado
@@ -324,9 +324,9 @@ Commands.GodMode.Forbidden=[mcMMO] No se permite Modo Dios en este mundo (Ver pe
 Commands.Inspect=<jugador> [[RED]]-Ver informaci\u00f3n detallada del jugador
 Commands.Invite.Accepted=[[GREEN]]Invitaci\u00f3n Aceptada. Te uniste al grupo {0}
 Commands.Invite.Success=[[GREEN]]Invitaci\u00f3n enviada satisfactoriamente
-Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
+Commands.Leaderboards=<habilidad> <p\u00e1gina> [[RED]]- Tabla de posiciones
 Commands.mcgod=[[RED]]- Alternar Modo Dios
-Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
+Commands.mmoedit=[jugador] <habilidad> <nuevo valor> [[RED]] - Modificar habilidad
 Commands.ModDescription=[[RED]]- Lea la descripci\u00f3n breve del mod
 Commands.NoConsole=Este comando no es soportado desde la consola.
 Commands.Other=[[GREEN]]--OTROS COMANDOS--
@@ -336,49 +336,49 @@ Commands.Party.Chat.On=S\u00f3lo chat de grupo [[RED]]activado
 Commands.Party.Commands=[[GREEN]]--COMANDOS DEL GRUPO--
 Commands.Party.Invite.0=[[RED]]ATENCI\u00d3N: [[GREEN]]Fuiste invitado al grupo {0} por {1}
 Commands.Party.Invite.1=[[YELLOW]]Ingresa [[GREEN]]/accept[[YELLOW]] para aceptar la invitaci\u00f3n
-Commands.Party.Invite=<player> [[RED]]- Send party invite
+Commands.Party.Invite=<jugador> [[RED]]- Enviar invitaci\u00f3n al grupo
 Commands.Party.Join=Se uni\u00f3 al grupo: {0}
 Commands.Party.Kick=[[RED]]\u00a1Fuiste expulsado del grupo {0}!
 Commands.Party.Leave=[[RED]]Abandonaste el grupo
 Commands.Party.Members=[[GREEN]]Miembros del Grupo: {0}
 Commands.Party.None=[[RED]]No est\u00e1s en un grupo.
 Commands.Party.Quit=[[RED]]- Abandona tu grupo actual
-Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
+Commands.Party.Teleport=<jugador> [[RED]]- Teletransportarse al miembro del grupo
 Commands.Party.Toggle=[[RED]]- Alternar chat de grupo
-Commands.Party=<party-name> [[RED]]- Create/Join designated party
+Commands.Party=<nombre del grupo> [[RED]]- Crear/Unirse al grupo elegido
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO-- Tabla de L\u00edderes: [[BLUE]]Nivel de Poder
 Commands.PowerLevel=[[DARK_RED]]NIVEL DE PODER: [[GREEN]]{0}
-Commands.Skill.Invalid=[[RED]]That is not a valid skillname!
+Commands.Skill.Invalid=[[RED]]\u00a1Esa no es una habilidad v\u00e1lida!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO-- Tabla de L\u00edderes: [[BLUE]]{0}
-Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
+Commands.SkillInfo=/<habilidad> [[RED]]- Ver informaci\u00f3n detallada acerca de la habilidad
 Commands.Stats.Self=TUS ESTAD\u00cdSTICAS
 Commands.Stats=[[RED]]- Ver tus estad\u00edsticas de mcMMO
 Commands.ToggleAbility=[[RED]]- Alternar activaci\u00f3n de habilidades con click derecho
-mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[BLUE]] for help.
+mcMMO.MOTD=[[BLUE]]Este servidor est\u00e1 utilizando mcMMO {0}! \nEscriba [[YELLOW]]/mcmmo[[BLUE]] para obtener ayuda.
 mcMMO.NoInvites=[[RED]]No tienes invitaciones en este momento
 mcMMO.NoPermission=[[DARK_RED]]Permisos insuficientes.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si no tienes acceso a una habilidad no ser\u00e1 mostrada aqu\u00ed.
-mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - mcMMO Wiki
+mcMMO.Wiki=[[BLUE]]Wiki de mcMMO - [[GREEN]]http://www.mcmmo.org/wiki/
 Commands.Party.InParty=[[GREEN]]Grupo: {0}
 Party.Forbidden=[mcMMO] No se permiten grupos en este mundo (Ver permisos)
-Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
-Party.Help.1=[[RED]]To join a passworded party, use /party <party-name> <password>
+Party.Help.0=[[RED]]El uso correcto es \'/party <nombre del grupo>\' para unirse o \'/party q\' para salir
+Party.Help.1=[[RED]]Para unirse a un grupo con contrase\u00f1a use /party <nombre del grupo> <contrase\u00f1a>
 Party.Help.2=[[RED]]Consulte [[YELLOW]]/party ? [[RED]]para m\u00e1s informaci\u00f3n
-Party.Help.3=[[RED]]Use /party <party-name> to join or /party q to quit
+Party.Help.3=[[RED]]Use \'/party <nombre del grupo>\' para unirse o \'/party q\' para salir
 Party.Help.4=[[RED]]Para bloquear o desbloquear tu grupo, usa /party <lock/unlock>
 Party.Help.5=[[RED]]Para proteger tu grupo con contrase\u00f1a, usa /party password <contrase\u00f1a>
 Party.Help.6=[[RED]]Para expulsar a un jugador de tu grupo, usa /party kick <jugador>
 Party.Help.7=[[RED]]Para transferir el grupo a otro jugador usa /party owner <jugador>
 Party.InformedOnJoin={0} [[GREEN]] ha entrado a tu fiesta
 Party.InformedOnQuit={0} [[GREEN]]abandon\u00f3 el grupo
-Party.InvalidName=[[DARK_RED]]That is not a valid party name.
+Party.InvalidName=[[DARK_RED]]Ese no es un nombre de grupo v\u00e1lido.
 Party.IsLocked=[[RED]]\u00a1Este grupo ya est\u00e1 bloqueado!
 Party.IsntLocked=[[RED]]\u00a1Este grupo no est\u00e1 bloqueado!
 Party.Locked=[[RED]]El grupo est\u00e1 bloqueado, solo el l\u00edder puede invitarte
 Party.NotInYourParty=[[DARK_RED]]{0} no esta en tu fiesta
 Party.NotOwner=[[DARK_RED]]No eres el due\u00f1o del grupo
 Party.PasswordSet=[[GREEN]]Contrase\u00f1a del grupo establecida: [[RED]]{0}
-Party.Player.Invalid=[[RED]]That is not a valid player.
+Party.Player.Invalid=[[RED]]Ese no es un jugador v\u00e1lido.
 Party.Teleport.Dead=[[RED]]No te puedes teletransportar a un jugador muerto.
 Party.Teleport.Hurt=[[RED]]Fuiste herido en los \u00faltimos {0} segundos y no te puedes teletransportar.
 Party.Teleport.Player=[[GREEN]]Te teletransportaste a {0}.
