--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -114,7 +114,7 @@ Herbalism.Skills.GTe.On=[[GREEN]]**GREEN TERRA ACTIVATED**
 Herbalism.Skills.GTe.Refresh=[[GREEN]]Your [[YELLOW]]Green Terra [[GREEN]]ability is refreshed!
 Herbalism.Skills.GTe.Other.Off=[[RED]]Green Terra[[GREEN]] has worn off for [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Green Terra!
-Herbalism.Skillup=[[YELLOW]]Herbalism skill increased by {0}. Total ({1})
+Herbalism.Skillup=[[YELLOW]]L\'abilit\u00e0 Erboristeria \u00e8 aumentata di {0}. Totale ({1})
 Mining.Ability.Length=[[RED]]Super Breaker Length: [[YELLOW]]{0}s
 Mining.Ability.Locked.0=LOCKED UNTIL 125+ SKILL (BLAST MINING)
 Mining.Ability.Locked.1=LOCKED UNTIL 250+ SKILL (BIGGER BOMBS)
@@ -164,7 +164,7 @@ Repair.Effect.6=Diamond Repair ({0}+ SKILL)
 Repair.Effect.7=Repair Diamond Tools & Armor
 Repair.Effect.8=Arcane Forging
 Repair.Effect.9=Ripara oggetti magici
-Repair.Listener.Anvil=[[DARK_RED]]You have placed an anvil, anvils can repair tools and armor.
+Repair.Listener.Anvil=[[DARK_RED]]Hai piazzato un\'incudine; le incudini possono riparare attrezzi e armature.
 Repair.Listener=Riparazione:
 Repair.SkillName=RIPARAZIONE
 Repair.Skills.AdeptDiamond=[[DARK_RED]]Non sei abbastanza abile da riparare il Diamante.
@@ -172,9 +172,9 @@ Repair.Skills.AdeptGold=[[DARK_RED]]Non sei abbastanza abile da riparare l\'Oro.
 Repair.Skills.AdeptIron=[[DARK_RED]]You\'re not skilled enough to repair Iron.
 Repair.Skills.AdeptStone=[[DARK_RED]]Non sei abbastanza abile da riparare la Pietra.
 Repair.Skills.FeltEasy=[[GRAY]]That felt easy.
-Repair.Skills.FullDurability=[[GRAY]]That is at full durability.
+Repair.Skills.FullDurability=[[GRAY]]\u00c8 gi\u00e0 a piena durevolezza.
 Repair.Skills.Mastery=[[RED]]Repair Mastery: [[YELLOW]]Extra {0}% durability restored
-Repair.Skills.StackedItems=[[DARK_RED]]You can\'t repair stacked items.
+Repair.Skills.StackedItems=[[DARK_RED]]Non puoi riparare oggetti ammucchiati.
 Repair.Skills.Super.Chance=[[RED]]Super Repair Chance: [[YELLOW]]{0}%
 Repair.Skillup=[[YELLOW]]L\'abilit\u00e0 Riparazione \u00e8 aumentata di {0}. Totale ({1})
 Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
@@ -212,14 +212,14 @@ Swords.Skills.SS.Refresh=[[GREEN]]Your [[YELLOW]]Serrated Strikes [[GREEN]]abili
 Swords.Skills.SS.Other.Off=[[RED]]Serrated Strikes[[GREEN]] has worn off for [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Serrated Strikes!
 Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
-Taming.Ability.Bonus.0=Environmentally Aware
-Taming.Ability.Bonus.1=Wolves avoid danger
+Taming.Ability.Bonus.0=Sicurezza Ambientale
+Taming.Ability.Bonus.1=I lupi evitano il pericolo
 Taming.Ability.Bonus.2=Pelliccia Folta
-Taming.Ability.Bonus.3=1/2 Damage, Fire Resistance
-Taming.Ability.Bonus.4=Shock Proof
-Taming.Ability.Bonus.5=Explosives do 1/6 normal damage
-Taming.Ability.Bonus.6=Sharpened Claws
-Taming.Ability.Bonus.7=+2 Damage
+Taming.Ability.Bonus.3=1/2 Danno, Resistenza al Fuoco
+Taming.Ability.Bonus.4=A Prova d\'Urto
+Taming.Ability.Bonus.5=Gli esplosivi fanno 1/6 del normale danno
+Taming.Ability.Bonus.6=Artigli Affilati
+Taming.Ability.Bonus.7=+2 al Danno
 Taming.Ability.Bonus.8=Fast Food Service
 Taming.Ability.Bonus.9=50% Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL 100+ SKILL (ENVIRONMENTALLY AWARE)
@@ -242,8 +242,8 @@ Taming.Effect.2=Gore
 Taming.Effect.3=Critical Strike that applies Bleed
 Taming.Effect.4=Sharpened Claws
 Taming.Effect.5=Damage Bonus
-Taming.Effect.6=Environmentally Aware
-Taming.Effect.7=Cactus/Lava Phobia, Fall DMG Immune
+Taming.Effect.6=Sicurezza Ambientale
+Taming.Effect.7=Evita Cactus/Lava, Immune alle Cadute
 Taming.Effect.8=Thick Fur
 Taming.Effect.9=DMG Reduction, Fire Resistance
 Taming.Listener.Wolf=[[DARK_GRAY]]Il tuo lupo si precipita da te...
@@ -252,7 +252,7 @@ Taming.SkillName=TAMING
 Taming.Skillup=[[YELLOW]]Taming skill increased by {0}. Total ({1})
 Taming.Summon.Complete=[[GREEN]]Summoning complete
 Taming.Summon.Fail.Ocelot=[[RED]]You have too many ocelots nearby to summon any more.
-Taming.Summon.Fail.Wolf=[[RED]]You have too many wolves nearby to summon any more.
+Taming.Summon.Fail.Wolf=[[RED]]Hai troppi lupi vicino per poterne evocare degli altri.
 Unarmed.Ability.Berserk.Length=[[RED]]Berserk Length: [[YELLOW]]{0}s
 Unarmed.Ability.Bonus.0=Iron Arm Style
 Unarmed.Ability.Bonus.1=+{0} DMG Upgrade
@@ -279,13 +279,13 @@ Unarmed.Skillup=[[YELLOW]]Unarmed skill increased by {0}. Total ({1})
 Woodcutting.Ability.0=Soffia Foglie
 Woodcutting.Ability.1=Soffia via le foglie
 Woodcutting.Ability.Chance.DDrop=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
-Woodcutting.Ability.Length=[[RED]]Tree Feller Length: [[YELLOW]]{0}s
+Woodcutting.Ability.Length=[[RED]]Durata di Abbatti Alberi: [[YELLOW]]{0} s
 Woodcutting.Ability.Locked.0=LOCKED UNTIL 100+ SKILL (LEAF BLOWER)
 Woodcutting.Effect.0=Tree Feller (ABILITY)
 Woodcutting.Effect.1=Make trees explode
-Woodcutting.Effect.2=Leaf Blower
-Woodcutting.Effect.3=Blow Away Leaves
-Woodcutting.Effect.4=Double Drops
+Woodcutting.Effect.2=Soffia Foglie
+Woodcutting.Effect.3=Soffia via le foglie
+Woodcutting.Effect.4=Doppi Drop
 Woodcutting.Effect.5=Double the normal loot
 Woodcutting.Listener=Woodcutting:
 Woodcutting.SkillName=TAGLIALEGNA
@@ -333,7 +333,7 @@ Commands.Other=[[GREEN]]--OTHER COMMANDS--
 Commands.Party.Accept=[[RED]]- Accept party invite
 Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
-Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
+Commands.Party.Commands=[[GREEN]]--COMANDI DI COMPAGNIA--
 Commands.Party.Invite.0=[[RED]]AVVISO: [[GREEN]]Hai ricevuto un invito ad unirti alla compagnia {0} da {1}
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite
 Commands.Party.Invite=<player> [[RED]]- Send party invite
@@ -356,7 +356,7 @@ Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
 mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[BLUE]] for help.
 mcMMO.NoInvites=[[RED]]You have no invites at this time
-mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
+mcMMO.NoPermission=[[DARK_RED]]Permessi insufficienti.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
 mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - mcMMO Wiki
 Commands.Party.InParty=[[GREEN]]Compagnia: {0}
@@ -381,7 +381,7 @@ Party.PasswordSet=[[GREEN]]Party password settata come {0}
 Party.Player.Invalid=[[RED]]Quello non \u00e8 un giocatore valido.
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
-Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
+Party.Teleport.Player=[[GREEN]]Ti sei teletrasportato da {0}.
 Party.Teleport.Target=[[GREEN]]{0} ti ha teletrasportato.
 Party.Unlocked=[[GRAY]]Party sbloccato.
 Commands.XPGain.Acrobatics=Falling
