--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Atterrissage gracieux**
 Acrobatics.Combat.Proc=[[GREEN]]**Esquiv\u00e9**
-Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
+Acrobatics.DodgeChance=[[RED]]Probabilit\u00e9 d\'esquive : [[YELLOW]]{0}
 Acrobatics.Effect.0=Roulade
 Acrobatics.Effect.1=R\u00e9duit ou annule les d\u00e9g\u00e2ts de chute
 Acrobatics.Effect.2=Roulade gracieuse
@@ -8,14 +8,14 @@ Acrobatics.Effect.3=Deux fois plus efficace qu\'une roulade classique
 Acrobatics.Effect.4=Esquive
 Acrobatics.Effect.5=R\u00e9duit de moiti\u00e9 les d\u00e9g\u00e2ts re\u00e7us
 Acrobatics.Listener=Acrobatie :
-Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
-Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
+Acrobatics.Roll.Chance=[[RED]]Probabilit\u00e9 de roulade : [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Probabilit\u00e9 de roulade gracieuse : [[YELLOW]]{0}
 Acrobatics.Roll.Text=**ROULADE**
 Acrobatics.SkillName=ACROBATIE
 Acrobatics.Skillup=[[YELLOW]]Le talent Acrobatie augmente de {0}. Total ({1})
-Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
-Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
-Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
+Archery.Combat.DazeChance=[[RED]]Probabilit\u00e9 de d\u00e9sorienter : [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Probabilit\u00e9 de r\u00e9cup\u00e9rer des fl\u00e8ches : [[YELLOW]]{0}
+Archery.Combat.SkillshotBonus=[[RED]]Tir pr\u00e9cis, bonus de d\u00e9g\u00e2ts : [[YELLOW]]{0}
 Archery.Effect.0=Tir pr\u00e9cis
 Archery.Effect.1=Augmente les d\u00e9g\u00e2ts inflig\u00e9s
 Archery.Effect.2=[[RED]]Chance de d\u00e9sorienter : [[YELLOW]]{0}%
@@ -83,7 +83,7 @@ Fishing.Effect.2=P\u00eache magique
 Fishing.Effect.3=Remonte des objets magiques
 Fishing.Effect.4=Secousse (sur monstres)
 Fishing.Effect.5=Fait tomber des objets des monstres avec une canne \u00e0 p\u00eache
-Fishing.ItemFound=[[GRAY]]Treasure found!
+Fishing.ItemFound=[[GRAY]]Tr\u00e9sor d\u00e9couvert !
 Fishing.Listener=P\u00eache :
 Fishing.MagicFound=[[GRAY]]Vous ressentez quelque chose de magique dans cette prise...
 Fishing.SkillName=P\u00caCHE
@@ -310,7 +310,7 @@ Combat.Ignition=[[RED]]**ALLUMAGE**
 Combat.StruckByGore=[[RED]]**FRAPP\u00c9 JUSQU\'AU SANG**
 Combat.TargetDazed=La cible a \u00e9t\u00e9 [[DARK_RED]]\u00c9tourdi
 Combat.TouchedFuzzy=[[DARK_RED]]Vous \u00eates \u00e9tourdi.
-mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
+mcMMO.Description=[[DARK_AQUA]]A propos de [[YELLOW]]mcMMO :,[[GOLD]]mcMMO est un mod orient\u00e9 RPG et [[RED]]open source[[GOLD]] cr\u00e9e par [[BLUE]]nossr50[[GOLD]] en f\u00e9vrier 2011. Son but est d\'offrir aux joueurs une exp\u00e9rience RPG de qualit\u00e9.,[[DARK_AQUA]]Infos :,[[GOLD]] - [[GREEN]]Faites [[RED]]/mcc[[GREEN]] pour afficher la liste des commandes,[[GOLD]] - [[GREEN]]Faites [[RED]]/[Talent][[GREEN]] pour afficher une description d\u00e9taill\u00e9es de ce talent,[[DARK_AQUA]]D\u00e9veloppeurs :,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Liens :,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug tracker,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] Canal IRC,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Thread sur Bukkit.org
 Commands.Ability.Off=Utilisation des comp\u00e9tences [[RED]]Off
 Commands.Ability.On=Utilisation des comp\u00e9tences [[GREEN]]On
 Commands.AdminChat.Off=Canal admin [[RED]]Off
@@ -358,7 +358,7 @@ mcMMO.MOTD=[[BLUE]]Ce serveur utilise mcMMO {0} !\nTapez [[YELLOW]]/mcmmo[[BLUE]
 mcMMO.NoInvites=[[RED]]Vous n\'avez pas \u00e9t\u00e9 invit\u00e9
 mcMMO.NoPermission=[[DARK_RED]]Vous n\'avez pas les droits.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si vous n\'avez pas les droits pour un talent, il n\'appara\u00eetra pas ici.
-mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - mcMMO Wiki
+mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - Wiki mcMMO
 Commands.Party.InParty=[[GREEN]]Joueurs dans le groupe : {0}
 Party.Forbidden=[mcMMO] Les groupes ne sont pas permis dans ce monde (voir les permissions)
 Party.Help.0=[[RED]]L\'usage correct est /party <nom> pour rejoindre, et /party q pour quitter
