--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ Version 1.3.07
  + Added permission nodes for Treasure & Magic Hunter for Fishing
  + Added config options for enabling/disabling specific double drops
  + Added automatic zip backup of flatfile database
+ = Fixed zip backup performing when running in SQL mode.
  = Fixed bug where the permission node for Impact didn't work
  = Fixed some bypass nodes defaulting true for Ops
  ! Changed Mining to ignore blocks when the pick is enchanted with Silk Touch
