--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,9 +14,10 @@ Version 1.3.07
  + Added a permission node for Greater Impact ability
  + Added permission nodes for Treasure & Magic Hunter for Fishing
  + Added config options for enabling/disabling specific double drops
- + Added automatic zip backup of flatfile database
+ + Added automatic zip backup of flatfile database & config files
  = Fixed bug where the permission node for Impact didn't work
  = Fixed some bypass nodes defaulting true for Ops
+ = Fixed bug with trying to use Chimera Wing while standing on a half-block
  ! Changed Mining to ignore blocks when the pick is enchanted with Silk Touch
  ! Changed Super Breaker to be non-functional when used with a Silk Touch enchanted pick
  ! Changed MySQL to save player information 50ms apart from each other to reduce the load on the MySQL server
