--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,7 @@ Version 1.3.07
  + Added a permission node for Archery bonus damage
  + Added a permission node for Greater Impact ability
  + Added permission nodes for Treasure & Magic Hunter for Fishing
+ + Added a permission node for Farmer's Diet
  + Added config options for enabling/disabling specific double drops
  + Added automatic zip backup of flatfile database & config files
  = Fixed bug where the permission node for Impact didn't work
