Command update - Mining. Also fixed typo on new Herbalism permission.

--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -271,7 +271,7 @@ Taming.Ability.Locked.3=LOCKED UNTIL 750+ SKILL (SHARPENED CLAWS)
 Taming.Ability.Locked.4=LOCKED UNTIL 50+ SKILL (FAST FOOD SERVICE)
 Taming.Combat.Chance.Gore=[[RED]]Gore Chance: [[YELLOW]]{0}%
 Taming.Effect.0=Beast Lore
-Taming.Effect.1=Bone-whacking inspects wolves/ocelots
+Taming.Effect.1=Bone-whacking inspects wolves & ocelots
 Taming.Effect.10=Shock Proof
 Taming.Effect.11=Explosive Damage Reduction
 Taming.Effect.12=Call of the Wild
