Vampirism for hardcore mode, needs testing.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,7 +8,7 @@ Key:
   - Removal
 
 Version 1.3.07
- + Added new Hardcore mode functionality to mcMMO
+ + Added new configurable Hardcore mode functionality to mcMMO
  + Added new bypass permission node for the negative penalties of Hardcore mode 'mcmmo.bypass.hardcoremode'
  + Added a permission node for Archery bonus damage
  + Added a permission node for Greater Impact ability
