--- a/Changelog.txt
+++ b/Changelog.txt
@@ -26,6 +26,8 @@ Version 1.3.07
  ! Changed MySQL to save player information 50ms apart from each other to reduce the load on the MySQL server
  ! Changed the permission node for Blast Mining detonation to mcmmo.ability.blastmining.detonate (was mcmmo.skills.blastmining) for the sake of consistency
  - Removed some unused permission nodes
+ - Removed a few config options in favor of permissions nodes (Hunger Bonus, Armor/Tool Repair, Instant Wheat Regrowth)
+ - Removed level requirement for repairing string tools from the config file
 
 Version 1.3.06
  + Added Iron Golem XP for aggressive golems
