--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,8 @@ Version 1.3.07
  + Added a permission node for Farmer's Diet
  + Added config options for enabling/disabling specific double drops
  + Added automatic zip backup of flatfile database & config files
+ = Fixed /p and /a incompatibilities with bChatManager
+ = Fixed Iron Grip working reversely
  = Fixed NPE when user clicked the HUD button with Spout
  = Fixed bug where the permission node for Impact didn't work
  = Fixed some bypass nodes defaulting true for Ops
@@ -38,7 +40,6 @@ Version 1.3.06
  + Added API functions for admin & party chat
  + Added Iron Grip skill to Unarmed which gives players an chance to keep from being disarmed.
  + Added some new languages to the locale files.
- = Fixed Iron Grip working reversely
  = Fixed Green Thumb consuming 2 seeds instead of 1
  = Fixed exploit where you could teleport to yourself with PTP to prevent things like fall damage
  = Fixed NPE error with Metrics on startup
