--- a/Changelog.txt
+++ b/Changelog.txt
@@ -11,6 +11,7 @@ Version 1.3.07
  + Added new configurable Hardcore mode functionality to mcMMO
  + Added new configurable Vampirism PVP stat leech for Hardcore mode
  + Added new bypass permission node for the negative penalties of Hardcore mode 'mcmmo.bypass.hardcoremode'
+ + Added configurable level curve multiplier which allows for tweaking the steepness of the XP needed to level formula
  + Added a permission node for Archery bonus damage
  + Added a permission node for Greater Impact ability
  + Added permission nodes for Treasure & Magic Hunter for Fishing
