--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ Version 1.3.07
  + Added a permission node for Farmer's Diet
  + Added config options for enabling/disabling specific double drops
  + Added automatic zip backup of flatfile database & config files
+ + Added config options to enable/disable specific skills for PVP & PVE
  = Fixed /p and /a incompatibilities with bChatManager
  = Fixed Iron Grip working reversely
  = Fixed NPE when user clicked the HUD button with Spout
