--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ Version 1.3.07
  + Added config options for enabling/disabling specific double drops
  + Added automatic zip backup of flatfile database & config files
  + Added config options to enable/disable specific skills for PVP & PVE
+ = Fixed Arrow Retrieval dropping only one arrow
  = Fixed /p and /a incompatibilities with bChatManager
  = Fixed Iron Grip working reversely
  = Fixed NPE when user clicked the HUD button with Spout
