--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ Version 1.3.07
  + Added config options for enabling/disabling specific double drops
  + Added automatic zip backup of flatfile database & config files
  + Added config options to enable/disable specific skills for PVP & PVE
+ = Fixed /ability not checking the right permission
  = Fixed rare NPE on /party command
  = Fixed Arrow Retrieval dropping only one arrow
  = Fixed /p and /a incompatibilities with bChatManager
