Fixed french locale string causing IAE on repair skillup

--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -176,7 +176,7 @@ Repair.Skills.FullDurability=[[GRAY]]C\'est d\u00e9j\u00e0 r\u00e9par\u00e9.
 Repair.Skills.Mastery=[[RED]]Ma\u00eetrise du forgeage : [[YELLOW]]Durabilit\u00e9 restaur\u00e9e augment\u00e9e de {0}%
 Repair.Skills.StackedItems=[[DARK_RED]]Vous ne pouvez pas r\u00e9parer les objets empil\u00e9s.
 Repair.Skills.Super.Chance=[[RED]]Probabilit\u00e9 de superbe r\u00e9paration : [[YELLOW]]{0}%
-Repair.Skillup=[[YELLOW]]Le talent R\u00e9paration augmente de {0}. Total {{1}}
+Repair.Skillup=[[YELLOW]]Le talent R\u00e9paration augmente de {0}. Total ({1})
 Repair.Arcane.Chance.Downgrade=[[GRAY]]Forge arcanique, chance de d\u00e9gradation : [[YELLOW]]{0}%
 Repair.Arcane.Chance.Success=[[GRAY]]Forge arcanique, taux de succ\u00e8s : [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]Les \u00e9nergies arcaniques ont \u00e9t\u00e9 affaiblies sur cet objet.
@@ -186,7 +186,7 @@ Repair.Arcane.Perfect=[[GREEN]]Vous avez pr\u00e9serv\u00e9 les \u00e9nergies ar
 Repair.Arcane.Rank=[[RED]]Forge arcanique : [[YELLOW]]Rang {0}/4
 Swords.Ability.Lower=[[GRAY]]**VOUS ABAISSEZ VOTRE \u00c9P\u00c9E**
 Swords.Ability.Ready=[[GREEN]]**VOUS LEVEZ VOTRE \u00c9P\u00c9E**
-Swords.Combat.Bleed.Chance=[[RED]]Chance de saignement : [[YELLOW]]{0} %
+Swords.Combat.Bleed.Chance=[[RED]]Chance de saignement : [[YELLOW]]{0}%
 Swords.Combat.Bleed.Length=[[RED]]Dur\u00e9e de saignement : [[YELLOW]]{0} ticks
 Swords.Combat.Bleed.Note=[[GRAY]]NOTE : [[YELLOW]]1 tick toutes les 2 secondes
 Swords.Combat.Bleeding.Stopped=[[GRAY]]Le saignement s\'est [[GREEN]]arr\u00eat\u00e9[[GRAY]] !
