--- a/Changelog.txt
+++ b/Changelog.txt
@@ -38,6 +38,7 @@ Version 1.3.07
  ! Changed the permission node for Blast Mining detonation to mcmmo.ability.blastmining.detonate (was mcmmo.skills.blastmining) for the sake of consistency
  ! Changed skill commands to only display what you have permissions for
  ! Changed mcMMO to use a new storage system for player placed blocks
+ - Removed the experience granted when an arrow strikes its shooter
  - Removed some unused permission nodes
  - Removed a few config options in favor of permissions nodes (Hunger Bonus, Armor/Tool Repair, Instant Wheat Regrowth)
  - Removed level requirement for repairing string tools from the config file
