--- a/Changelog.txt
+++ b/Changelog.txt
@@ -20,6 +20,8 @@ Version 1.3.07
  + Added config options for enabling/disabling specific double drops
  + Added automatic zip backup of flatfile database & config files
  + Added config options to enable/disable specific skills for PVP & PVE
+ = Fixed bug where Green Terra consumed seeds even on Mossy Stone Brick
+ = Fixed bug where the client didn't reflect the Stone Brick to Mossy Stone Brick change
  = Fixed bug where an arrow could bounce off entities on daze proc
  = Fixed bug where a player could gain Acrobatics experience while riding a cart
  = Fixed /party not working properly with 2 arguments
